Fixed bg-attachment test on iOS

--- a/style.css
+++ b/style.css
@@ -593,13 +593,16 @@ footer a:hover {
   and (-webkit-min-device-pixel-ratio: 2) { 
      header {
        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(img/sunset.png) no-repeat center center fixed;
-       background-size: cover;
-       background-attachment: fixed;
-       min-height: calc(100vh - 150px);
-       width: 100%;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
+       background-size: cover;
+       background-attachment: initial;
+       /*
+       background-attachment: fixed;
+       */
+       min-height: calc(100vh - 150px);
+       width: 100%;
      }
 
      #header-text {
